# monitoring-api

./: .flaskenv  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  README.md  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yaml
.github/workflows/: ci.yaml  registry.yaml
.kustomization/: README.md  README.rst
.kustomization/base/: cm.yaml  psp.yaml  rbac.yaml  sa.yaml
.kustomization/components/api/: deployment.yaml  ingress.yaml  svc.yaml
.kustomization/overlays/dev/: kustomization.yaml
.kustomization/overlays/dev/configs/: base.yaml
.kustomization/overlays/dev/ingress/: api.yaml
.kustomization/overlays/prd/: kustomization.yaml
.kustomization/overlays/prd/configs/: base.yaml
.kustomization/overlays/prd/ingress/: api.yaml
src/: __init__.py  app.py
src/api/: bright.py  health_checks.py
src/cli/: test.py
src/models/: bright.py
src/resources/: __init__.py  health_checks.py
src/schemas/serializers/: bright.py
src/schemas/serlializers/: http.py
src/serialization/serlializers/: bright.py
src/serialization/serlializers/bright/: HealthCheck.py
src/services/: bright.py
src/settings/: __init__.py  config.py  ctx.py  env.py  oas.py  oas3.yaml
src/tests/: test_health_checks.py
src/tests/functional/: test_health_checks.py
src/tests/unit/: test_app.py  test_bright.py
src/utils/: __init__.py
tests/functional/: conftest.py  test_app.py  test_health_checks.py
tests/unit/: test_app.py  test_bright.py
