[tool.poetry]
name = "monitoring-api"
version = "0.1.1"
description = "A service responsible for providing monitoring data."
authors = ["Renato Teixeira <rena2damas@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "*", from = "src" }
]
homepage = ""
repository = "https://github.com/rena2damas/monitoring-api"
documentation = ""
keywords = [
    "monitoring",
    "swagger",
    "openapi",
    "oas3",
    "rest",
    "api",
    "web",
    "flask",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
aenum = "^3.1.11"
apispec = { extras = ["marshmallow", "yaml"], version = "^5.2.2" }
apispec-plugins = "^0.1.3"
apispec-ui = "^0.1.3"
environs = "^9.5.0"
Flask = "^2.2.2"
Flask-RESTful = "^0.3.9"
gunicorn = "^20.1.0"
python = "^3.7"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
coverage = "^6.5"
pre-commit = "^2.21.0"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
